--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1>Front End Nano Degree Projects</h1>
 <ul>
-  <li><a href="https://freytes.github.io/FEND/1 FEND Blog Site/">Blog Site</a></li>
+  <li><a href="https://freytes.github.io/FEND/1-FEND-Blog-Site/">Blog Site</a></li>
 </ul>
 </body>
 </html>
