--- a/1-FEND-Blog-Site/index.html
+++ b/1-FEND-Blog-Site/index.html
@@ -96,9 +96,8 @@ body {
       <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
       
     </div>
-    
+    <div style="width: 300; float:right;"> <h3>...</h3> </div>
   </div>
-  
   <div class="rightcolumn">
     <div class="card">
       <h2>About Me</h2>
