--- a/1-FEND-Blog-Site/index.html
+++ b/1-FEND-Blog-Site/index.html
@@ -50,6 +50,9 @@ body {
   width: 100%;
   padding: 20px;
 }
+.about {
+  border-radius: 50%;
+}
 
 /* Add a card effect for articles */
 .card {
@@ -113,7 +116,9 @@ body {
   <div class="rightcolumn">
     <div class="card">
       <h2>About Me</h2>
-      <div class="img" style="height:100px;">Image</div>
+      <div class="about">
+        <img src="./1-FEND-Blog-Site/assets/images/cfreytes-headshot.jpeg" alt="Freytes Headshot" style="height:200px">
+      </div>
       <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
     </div>
   </div>
