--- a/1-FEND-Blog-Site/index.html
+++ b/1-FEND-Blog-Site/index.html
@@ -30,7 +30,7 @@ div{
   padding: 10px;
   font-size: 10px;
   text-align: center;
-  background: #aaa;
+  background: #1d1e22;
   overflow: hidden;
 }
 
@@ -43,6 +43,10 @@ div{
   text-decoration: none;
   font-size: 17px;
 }
+/* Right-aligned section inside the top navigation */
+.topnav-right {
+  float: right;
+}
 
 /* Change the color of links on hover */
 .topmenu a:hover {
@@ -52,14 +56,14 @@ div{
 
 /* Add a color to the active/current link */
 .topmenu a.active {
-  background-color: #4CAF50;
-  color: white;
+
+color: white;
 }
 
 
 /* Create two unequal columns that floats next to each other */
 /* Left column */
-.leftcolumn {   
+.leftcolumn {  
   float: left;
   width: 75%;
 }
@@ -67,6 +71,7 @@ div{
 /* Right column */
 .rightcolumn {
   float: left;
+  height: auto;
   width: 25%;
   padding-left: 20px;
 }
@@ -74,17 +79,22 @@ div{
 /* image block */
 .img {
   background-color: #aaa;
-  width: 100%;
+  width:100%; 
+  height:100%; 
   padding: 20px;
 }
 
 /* images */
 .imgAbout {
+  width:100%; 
+  height:auto; 
+  object-fit: contain; 
   border-radius: 50%;
 }
 
 /* Add a card effect for articles */
 .card {
+  min-height: 550px;
    background-color: white;
    padding: 20px;
    margin-top: 20px;
@@ -101,13 +111,14 @@ div{
 .footer {
   padding: 20px;
   text-align: center;
-  background: #ddd;
+  background: #1d1e22;
   margin-top: 20px;
 }
 
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
   .leftcolumn, .rightcolumn {   
+  
     width: 100%;
     padding: 0;
   }
@@ -117,7 +128,10 @@ div{
 <body>
 
 <div class="topmenu">
-<a href="https://github.com/freytes">Home</a>
+<a href="./index.html">Home</a>
+<div class="topnav-right">
+  <a href="https://github.com/freytes">Github</a>
+</div>
 </div>
 
 <div class="header">
@@ -128,7 +142,7 @@ div{
   <div class="leftcolumn">
     <div class="card">
     
-    <div style="width: 100%; overflow: hidden;">
+    <div style="width: 100%; height: 100%; overflow: hidden;">
     <div>March 31, 2020</div>
     <div> <h3>Reality of Anxiety : The Anxious Mind</h3> </div>
     </div>
