--- a/1-FEND-Blog-Site/index.html
+++ b/1-FEND-Blog-Site/index.html
@@ -135,7 +135,7 @@ color:black;
   border: noSne;
   cursor: pointer;
 }
-.footer-links a:visited{
+.footer-links a{
 float: right;
 color: white;
 }
