Added Revised Projects

--- a/1-FEND-Blog-Site/post.html
+++ b/1-FEND-Blog-Site/post.html
@@ -4,9 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="./assets/styles/maincontent.css">
-  <link rel="stylesheet" href="./assets/styles/navigation.css">
-  <link rel="stylesheet" href="./assets/styles/responsive.css">
+  <link rel="stylesheet" href="./assets/styles/main.css">
 
 </head>
 
@@ -33,18 +31,17 @@
       <article>
         <div class="card">
 
-          <div style="width: 100%; height: 100%; overflow: hidden;">
-            <div>March 31, 2020 | <em>2 minute read</em> </div>
+          <div>
+            <div>March 31, 2020 | Christopher Freytes | <em>2 minute read</em> </div>
             <div>
               <h3>Reality of Anxiety : The Anxious Mind</h3>
             </div>
           </div>
 
           <figure>
-            <div class="img" style="height:200px;"> <img src="./assets/images/head-2360166_640.jpg" alt="Anxious"
-                style="height:200px">
+            <div class="img"> <img src="./assets/images/head-2360166_640.jpg" class = "blogpostimg" alt="Anxious">
               <figcaption>
-                <p style="font-size: 10px">[A silhouette of a head in clouds - Author unknown]</p>
+                <p class="figcaption">[A silhouette of a head in clouds - Author unknown]</p>
               </figcaption>
 
             </div>
@@ -85,10 +82,10 @@
         <div class="nano-card">
           <h3>Share on Social Media: </h3>
           <div class="nano-card-links">
-            <h3><a href='#'>FB</a></h3>
+            <h3><a href='#'>FaceBook</a></h3>
           </div>
           <div class="nano-card-links">
-            <h3><a href='#'>MEDIUM</a></h3>
+            <h3><a href='#'>LinkedIn</a></h3>
           </div>
       </sharenav>
     </div>
@@ -97,23 +94,22 @@
 
 
   <div class="rightcolumn">
-    <aboutme>
-      <div class="card">
-        <h2>About Me</h2>
-        <div class="about">
-          <img src="./assets/images/cfreytes-headshot.jpeg" alt="Freytes Headshot" style="height:200px"
-            class="imgAbout">
-        </div>
-        <p><em><b>Hello!</b></em> I am glad you made, it and hope you stay. My name is Christopher Freytes and I am
-          just a regular guy who loves coffee and software development.</p>
-        <p>Places where I can be <b>found:</b></p>
-        <ul>
-          <li><a href="https://github.com/freytes">Github</a></li>
-          <li><a href="https://linkedin.com/in/cfreytes">Linkedin</a></li>
-          <li><a href="https://twitter.com/iamfreytes">Twitter</a></li>
-        </ul>
+
+    <div class="card">
+      <h2>About Me</h2>
+      <div class="about">
+        <img src="./assets/images/cfreytes-headshot.jpeg" alt="Freytes Headshot" class="imgAbout">
       </div>
-    </aboutme>
+      <p><em><b>Hello!</b></em> I am glad you made, it and hope you stay. My name is Christopher Freytes and I am
+        just a regular guy who loves coffee and software development.</p>
+      <p>Places where I can be <u><b>found:</b></u></p>
+      <ul>
+        <li><a href="https://github.com/freytes">Github</a></li>
+        <li><a href="https://linkedin.com/in/cfreytes">Linkedin</a></li>
+        <li><a href="https://twitter.com/iamfreytes">Twitter</a></li>
+      </ul>
+    </div>
+
   </div>
   </div>
 
@@ -126,8 +122,8 @@
           <button type="submit">Subscribe</button>
       </div>
       <div class="footer-links">
-        <h2 style=color:white;><a href='#'>BLOG</a></h2>
-        <h2 style=color:white;><a href='#'>OTHER</a></h2>
+        <h2><a href='#'>BLOG</a></h2>
+        <h2><a href='#'>OTHER</a></h2>
       </div>
     </div>
   </footer>
