--- a/1-FEND-Blog-Site/index.html
+++ b/1-FEND-Blog-Site/index.html
@@ -3,26 +3,23 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link rel="stylesheet" href="./assets/styles/maincontent.css">
-  <link rel="stylesheet" href="./assets/styles/navigation.css">
-  <link rel="stylesheet" href="./assets/styles/responsive.css">
+  <link rel="stylesheet" href="./assets/styles/main.css">
 </head>
 
 <body>
 
-  <navigation>
+  <nav>
     <div class="topmenu">
       <a href="./index.html">Home</a>
       <div class="topnav-right">
         <a href="https://github.com/freytes">Github</a>
       </div>
     </div>
-  </navigation>
+  </nav>
 
   <header>
     <div class="header">
-      <h2>FEND BLOG</h2>
+      <h1>FEND BLOG</h1>
     </div>
   </header>
 
@@ -31,17 +28,16 @@
       <article>
         <div class="card">
 
-          <div style="width: 100%; height: 100%; overflow: hidden;">
+          <div>
             <div>March 31, 2020 | Christopher Freytes</div>
             <div>
               <h3>Reality of Anxiety : The Anxious Mind</h3>
             </div>
           </div>
           <figure>
-            <div class="img" style="height:200px;"> <img src="./assets/images/head-2360166_640.jpg" alt="Anxious"
-                style="height:200px">
+            <div class="img"> <img src="./assets/images/head-2360166_640.jpg" class = "blogpostimg" alt="Anxious">
               <figcaption>
-                <p style="font-size: 10px">[A silhouette of a head in clouds - Author unknown]</p>
+                <p class="figcaption">[A silhouette of a head in clouds - Author unknown]</p>
               </figcaption>
 
             </div>
@@ -56,31 +52,38 @@
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
             ullamco.</p>
 
-          <div>
+          <div class="readmore">
             <h3><a href='./post.html'>Read More...</a></h3>
+            <h3><a href='#'>Related Posts...</a></h3>
+          </div>
+
+          <div class="share">
+            <h3>Share</h3>
+            <h3><a href='#'>Facebook</a></h3>
+            <h3><a href='#'>LinkedIn</a></h3>
           </div>
         </div>
       </article>
 
     </div>
     <div class="rightcolumn">
-      <aboutme>
-        <div class="card">
-          <h2>About Me</h2>
-          <div class="about">
-            <img src="./assets/images/cfreytes-headshot.jpeg" alt="Freytes Headshot" style="height:200px"
-              class="imgAbout">
-          </div>
-          <p><em><b>Hello!</b></em> I am glad you made, it and hope you stay. My name is Christopher Freytes and I am
-            just a regular guy who loves coffee and software development.</p>
-          <p>Places where I can be <b>found:</b></p>
-          <ul>
-            <li><a href="https://github.com/freytes">Github</a></li>
-            <li><a href="https://linkedin.com/in/cfreytes">Linkedin</a></li>
-            <li><a href="https://twitter.com/iamfreytes">Twitter</a></li>
-          </ul>
+
+      <div class="card">
+        <h2>About Me</h2>
+        <div class="about">
+          <img src="./assets/images/cfreytes-headshot.jpeg" alt="Freytes Headshot" 
+            class="imgAbout">
         </div>
-      </aboutme>
+        <p><em><b>Hello!</b></em> I am glad you made, it and hope you stay. My name is Christopher Freytes and I am
+          just a regular guy who loves coffee and software development.</p>
+        <p>Places where I can be <u><b>found:</b></u></p>
+        <ul>
+          <li><a href="https://github.com/freytes">Github</a></li>
+          <li><a href="https://linkedin.com/in/cfreytes">Linkedin</a></li>
+          <li><a href="https://twitter.com/iamfreytes">Twitter</a></li>
+        </ul>
+      </div>
+
 
     </div>
   </div>
@@ -92,8 +95,8 @@
           <button type="submit">Subscribe</button>
       </div>
       <div class="footer-links">
-        <h2 style=color:white;><a href='#'>BLOG</a></h2>
-        <h2 style=color:white;><a href='#'>OTHER</a></h2>
+        <h2><a href='#'>BLOG</a></h2>
+        <h2><a href='#'>OTHER</a></h2>
       </div>
     </div>
   </footer>
